--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Age Counter</h1>
+  <div class="mainContainer">
+    
+    <div class="container1">
+      <div class="inputBox">
+<input type="date">
+</div>
+<div >
+  <button>Calculate</button>
+</div>
+    </div>
+    <div class="container2">
+
+    </div>
+
+  </div>
 </body>
 </html>
