Make design three boxes for display age

--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 </div>
     </div>
     <div class="container2">
+      <div class="box">
+        <h1>24</h1>
+        <p>Years</p>
+      </div>
+      <div class="box">
+        <h1>24</h1>
+        <p>Years</p>
+      </div>
+      <div class="box">
+        <h1>24</h1>
+        <p>Years</p>
+      </div>
 
     </div>
 
