Get three boxes for showing years,months and days

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     </div>
     <div class="container2">
       <div class="box">
-        <h1>24</h1>
+        <h1 id="years">24</h1>
         <p>Years</p>
       </div>
       <div class="box">
-        <h1>24</h1>
+        <h1 id="months">24</h1>
         <p>Years</p>
       </div>
       <div class="box">
-        <h1>24</h1>
+        <h1 id="days">24</h1>
         <p>Years</p>
       </div>
 
