Update the  html code of three boxes

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     </div>
     <div class="container2">
       <div class="box">
-        <h1 id="years">24</h1>
+        <h1 id="years">0</h1>
         <p>Years</p>
       </div>
       <div class="box">
-        <h1 id="months">24</h1>
-        <p>Years</p>
+        <h1 id="months">0</h1>
+        <p>Months</p>
       </div>
       <div class="box">
-        <h1 id="days">24</h1>
-        <p>Years</p>
+        <h1 id="days">0</h1>
+        <p>Days</p>
       </div>
 
     </div>
