Add h1 tag on the top and set condition on age

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="mainContainer">
-    
+    <h1>Age Counter</h1>
     <div class="container1">
       <div class="inputBox">
 <input type="date">
@@ -19,15 +19,15 @@
     </div>
     <div class="container2">
       <div class="box">
-        <h1 id="years">0</h1>
+        <h1 id="years">00</h1>
         <p>Years</p>
       </div>
       <div class="box">
-        <h1 id="months">0</h1>
+        <h1 id="months">00</h1>
         <p>Months</p>
       </div>
       <div class="box">
-        <h1 id="days">0</h1>
+        <h1 id="days">00</h1>
         <p>Days</p>
       </div>
 
